force-app/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>CIS Salesforce Support process</fullName>
        <description>A support process for CIS salesforce support cases</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>C_R_Application_Status__c</fullName>
        <formula>TEXT(Contact.CIS_Application_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>C&amp;R Application Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate_only__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDate_only</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Educator_Application_Type__c</fullName>
        <formula>IF(INCLUDES(  Contact.Educator_application_type__c  , &quot;Accreditation Evaluator&quot;), &quot;Accreditation Evaluator&quot;, NULL)  + BR() + 
IF(INCLUDES( Contact.Educator_application_type__c , &quot;Career and Recruitment Candidate&quot;), &quot;Career and Recruitment Candidate&quot;, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Educator Application Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Area__c</fullName>
        <label>Service Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>C&amp;R</fullName>
                </value>
                <value>
                    <fullName>Communications/Pardot</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>General Administration</fullName>
                </value>
                <value>
                    <fullName>HE</fullName>
                </value>
                <value>
                    <fullName>R&amp;D</fullName>
                </value>
                <value>
                    <fullName>SS&amp;E</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>C_R_Application_Status__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>CIS_Salesforce_Support_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
        <columns>CASES.STATUS</columns>
        <columns>NAME</columns>
        <columns>Service_Area__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress,Pending,Escalated,On Hold</value>
        </filters>
        <label>CIS Salesforce Support</label>
        <language>en_US</language>
        <queue>CIS_Salesforce_Support</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>C_R_Candidate_Queue_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>C_R_Application_Status__c</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>Open Potential Candidate Queue</label>
        <queue>C_R_Candidate_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IngenicoConfirmations_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CreatedDate_only__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>notContain</operation>
            <value>CANCEL/DENY</value>
        </filters>
        <label>IngenicoConfirmations</label>
        <queue>IngenicoConfirmations</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IngenicoConfirmations_SIN_NL</fullName>
        <booleanFilter>(1 OR 2 )AND 3</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>NL</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>SIN</value>
        </filters>
        <filters>
            <field>CASES.SUBJECT</field>
            <operation>contains</operation>
            <value>status: 9</value>
        </filters>
        <label>IngenicoConfirmations - SIN/NL</label>
        <language>en_US</language>
        <queue>IngenicoConfirmations</queue>
        <sharedTo>
            <group>CIS_Finance_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New,In Progress,Pending,Escalated,On Hold</value>
        </filters>
        <label>My Cases</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>CIS_Salesforce_Support</fullName>
        <active>true</active>
        <businessProcess>CIS Salesforce Support process</businessProcess>
        <description>A record type for cases submitted to CIS Salesforce support</description>
        <label>CIS Salesforce Support</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>